# poetry-pre-commit-plugin

./: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
poetry_pre_commit_plugin/: plugin.py
src/poetry_pre_commit_plugin/: plugin.py
tests/: test_plugin.py
