[tool.poetry]
name = "poetry-pre-commit-plugin"
version = "0.1.1"
description = "Poetry plugin for automatically installing pre-commit hook when it is added to a project"
authors = ["Vytautas Strimaitis <vstrimaitis@gmail.com>"]
homepage = "https://github.com/vstrimaitis/poetry-pre-commit-plugin"
documentation = "https://github.com/vstrimaitis/poetry-pre-commit-plugin"
readme = "README.md"
packages = [{include = "poetry_pre_commit_plugin", from = "src"}]

[tool.poetry.dependencies]
python = "^3.7"
poetry = "^1.2.0b1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
mypy = "^0.971"
black = "^22.6.0"
isort = "^5.10.1"

[tool.poetry.plugins."poetry.application.plugin"]
poetry-pre-commit-plugin = "poetry_pre_commit_plugin.plugin:PreCommitPlugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
